--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,61 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    /* colors */
+    --clr-primary: #075985;
+    --clr-light: #f1f5f9;
+    --clr-dark: #1e1b1b;
+    --clr-gray: #d9d9d9;
+    --clr-yellow: #fbbf24;
+    --clr-indigo: #3730a3;
+    --clr-maroon: #9f1239;
+    --clr-pink: #f87171;
+    --clr-bluegreen: #0d9488;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+    /* sizes */
+    --size-xxs: 0.5rem; /* 8px */
+    --size-xs: 0.75rem; /* 12px */
+    --size-sm: 0.875rem; /* 14px */
+    --size-base: 1rem; /* 16px default */
+    --size-lg: 1.125rem; /* 18px*/
+    --size-xl: 1.25rem; /* 20px */
+    --size-2xl: 1.5rem; /* 24px */
+    --size-3xl: 1.875rem; /* 30px */
+    --size-4xl: 2.25rem; /* 36px */
+    --size-5xl: 3rem; /* 48px */
+    --size-6xl: 3.75rem; /* 60px */
+    --size-7xl: 4.5rem; /* 72px */
+    --size-8xl: 6rem; /* 96px */
+    --size-9xl: 8rem; /* 128px */
+    --size-10xl: 10rem; /* 160px */
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+* {
+    margin: 0;
+    line-height: calc(1em + 0.5rem);
 }
-a:hover {
-  color: #535bf2;
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    font-family: "Playfair Display", serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+img,
+picture,
+video,
+canvas,
+svg {
+    display: block;
+    max-width: 100%;
+    user-select: none;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    display: block;
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: inherit;
 }
