--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
     /* colors */
     --clr-primary: #075985;
+    --clr-primary-hover: #177cb2;
     --clr-light: #f1f5f9;
     --clr-dark: #1e1b1b;
     --clr-gray: #d9d9d9;
@@ -37,6 +38,7 @@ html {
 
 body {
     font-family: "Playfair Display", serif;
+    background-color: var(--clr-light);
 }
 
 .page-wrapper {
