--- a/src/utils.css
+++ b/src/utils.css
@@ -15,8 +15,18 @@
     margin-top: 10rem;
 }
 
-.primary__btn {
+.primary-btn {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
     background-color: var(--clr-primary);
+    color: var(--clr-light);
+    transition: background-color 0.3s;
+}
+
+.primary-btn:hover {
+    background-color: var(--clr-primary-hover);
 }
 
 /* 2xl*/
