--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     --clr-lightyellow: #fde047;
     --clr-yellow: #fbbf24;
     --clr-bluegreen: #6ee7b7;
+    --clr-success: #059669;
 
     /* sizes */
     --size-xxs: 0.5rem; /* 8px */
@@ -70,4 +71,16 @@ a {
     text-decoration: none;
     color: inherit;
     font-weight: 600;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
 }
