--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
     --clr-lightyellow: #fde047;
     --clr-yellow: #fbbf24;
     --clr-bluegreen: #6ee7b7;
+    --clr-rose: #f87171;
+    --clr-rose-hover: #e35b5b;
     --clr-success: #059669;
 
     /* sizes */
