--- a/src/pages/Food/Food.css
+++ b/src/pages/Food/Food.css
@@ -3,4 +3,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
+}
+
+.foods__h1 {
+    background-color: var(--clr-primary);
+    color: var(--clr-light);
+    padding: 1rem;
+    font-size: var(--size-6xl);
+    border-radius: 1rem;
 }
