--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,3 +20,42 @@
     font-size: var(--size-lg);
     color: var(--clr-light);
 }
+
+/* 2xl*/
+/* @media (max-width: 1536px) {} */
+
+/* xl */
+@media (max-width: 1280px) {
+    .footer__p {
+        font-size: var(--size-base);
+    }
+}
+
+/* lg */
+@media (max-width: 1024px) {
+    .footer__p {
+        font-size: var(--size-sm);
+    }
+}
+
+/* md */
+@media (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .footer__p {
+        text-align: center;
+    }
+}
+
+/* sm */
+@media (max-width: 640px) {
+    .footer__p {
+        font-size: var(--size-xs);
+    }
+}
+
+/* xs */
+/* @media (max-width: 475px) {} */
