--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,6 @@
     flex-direction: row;
     align-items: center;
     /* justify-content: center; */
-    position: relative;
 }
 
 .header__title-wrapper {
@@ -29,6 +28,14 @@
     font-style: italic;
     text-transform: uppercase;
     color: var(--clr-bluegreen);
+}
+
+.nav-wrapper {
+    flex: 1;
+    position: relative;
+    z-index: 9999;
+    display: flex;
+    align-items: center;
 }
 
 .desktop-nav {
@@ -57,3 +64,128 @@
     background-color: var(--clr-light);
     color: var(--clr-primary);
 }
+
+.desktop-menuButton {
+    display: none;
+}
+
+.mobile-nav {
+    display: none;
+}
+
+/* 2xl*/
+/* @media (max-width: 1536px) {} */
+
+/* xl */
+@media (max-width: 1280px) {
+    .header__title {
+        font-size: var(--size-6xl);
+    }
+
+    .header__subtitle {
+        font-size: var(--size-2xl);
+    }
+
+    .desktop-nav-li {
+        font-size: var(--size-2xl);
+    }
+}
+
+/* lg */
+@media (max-width: 1024px) {
+    .header__title {
+        font-size: var(--size-4xl);
+    }
+
+    .header__subtitle {
+        font-size: var(--size-xl);
+    }
+
+    .desktop-nav-li {
+        font-size: var(--size-xl);
+    }
+
+    .desktop-nav {
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+}
+
+/* md */
+@media (max-width: 768px) {
+    .desktop-nav-ul {
+        display: none;
+    }
+
+    .desktop-menuButton {
+        display: block;
+        color: var(--clr-light);
+        width: var(--size-4xl);
+        height: var(--size-4xl);
+        margin-left: auto;
+        margin-right: 1rem;
+    }
+
+    .mobile-nav.show {
+        display: flex;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 999;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(7, 89, 133, 0.9);
+        justify-content: center;
+        align-items: center;
+    }
+
+    .mobile-nav-ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        gap: 1rem;
+        list-style: none;
+    }
+
+    .mobile-nav-li {
+        font-size: var(--size-base);
+        text-decoration: none;
+        font-weight: 600;
+        color: var(--clr-light);
+        letter-spacing: -0.05em;
+        transition: 0.3s;
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+
+    .mobile-nav-li:hover {
+        background-color: var(--clr-light);
+        color: var(--clr-primary);
+    }
+}
+
+/* sm */
+@media (max-width: 640px) {
+    .header__title {
+        font-size: var(--size-3xl);
+    }
+
+    .header__subtitle {
+        font-size: var(--size-lg);
+    }
+
+    .desktop-menuButton {
+        width: var(--size-3xl);
+        height: var(--size-3xl);
+    }
+
+    .mobile-nav-li {
+        font-size: var(--size-sm);
+        padding: 0.5rem;
+    }
+}
+
+/* xs */
+/* @media (max-width: 475px) {} */
