--- a/src/pages/Rates/Rates.css
+++ b/src/pages/Rates/Rates.css
@@ -88,3 +88,21 @@
     font-size: var(--size-xl);
     border-radius: 1rem;
 }
+
+/* 2xl*/
+/* @media (max-width: 1536px) {} */
+
+/* xl */
+/* @media (max-width: 1280px) {} */
+
+/* lg */
+/* @media (max-width: 1024px) {} */
+
+/* md */
+/* @media (max-width: 768px) {} */
+
+/* sm */
+/* @media (max-width: 640px) {} */
+
+/* xs */
+/* @media (max-width: 475px) {} */
